--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,6 +17,10 @@ db.default.url="jdbc:postgresql://127.0.0.1/scaladays"
 db.default.password=scaladays
 db.default.user=scaladays
 
+db.test.driver=org.postgresql.Driver
+db.test.url="jdbc:postgresql://127.0.0.1/test"
+db.test.user=test
+
 #db.default.url=${?cloud.services.tasks-db.connection.uri}
 #db.default.password=${?cloud.services.tasks-db.connection.password}
 #db.default.user=${?cloud.services.tasks-db.connection.username}
