understand db connection part

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,6 @@
 # Configuration
-
+#https://www.playframework.com/documentation/2.3.x/ProductionConfiguration
+#指定不同文件在不同环境中
 application.name=Zentasks
             
 # Secret key
@@ -17,9 +18,9 @@ db.default.url="jdbc:postgresql://127.0.0.1/scaladays"
 db.default.password=scaladays
 db.default.user=scaladays
 
-db.test.driver=org.postgresql.Driver
-db.test.url="jdbc:postgresql://127.0.0.1/test"
-db.test.user=test
+#db.test.driver=org.postgresql.Driver
+#db.test.url="jdbc:postgresql://127.0.0.1/test"
+#db.test.user=test
 
 #db.default.url=${?cloud.services.tasks-db.connection.uri}
 #db.default.password=${?cloud.services.tasks-db.connection.password}
